@@ -1,5 +1,9 @@
 pipeline {
     agent any
+    tools {
+        // O nome deve ser EXATAMENTE o mesmo cadastrado nas Ferramentas
+        jdk 'JDK_17'
+    }
     stages {
         stage('build backend'){
             steps {
@@ -17,13 +21,6 @@ pipeline {
               }
               steps {
                     withSonarQubeEnv('sonar_local'){
-                        // Use a configured Java 11 or 17 tool installation
-                        withEnv(['SONAR_SCANNER_OPTS=--add-opens=java.base/java.lang=ALL-UNNAMED']) {
-                             script {
-        
-                                bat "${scannerHome}\\bin\\sonar-scanner.bat"
-                            }
-                        }
                         bat "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=deployback -Dsonar.host.url=http://localhost:9000 -Dsonar.login=849e9cadd301bd28751e2fe723a2e145851c01bb -Dsonar.java.binaries=target"
                     }
             }
